--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,10 @@
     </properties>
 
     <dependencies>
-        <!-- GSON dependency -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.10.1</version> <!-- 使用最新版本 -->
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
 
